--- a/css/styles.css
+++ b/css/styles.css
@@ -1,159 +1,117 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway:400,700');
+@import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
 
 * {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;	
-	font-family: Raleway, sans-serif;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
 }
 
 body {
-	background: linear-gradient(340deg, #C7C5F4, #776BCC);		
+    background-color: #F09DED;
 }
 
 .container {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
 }
 
-.screen {		
-	background: linear-gradient(90deg, #5D54A4, #7C78B8);		
-	position: fixed;	
-	height: 600px;
-	width: 360px;	
-	box-shadow: 0px 0px 24px #5C5696;
+.box {
+    display: flex;
+    background-color: rgb(255, 255, 255);
+    position: fixed;
+	height: 490px;
+    width: 100%;
+	max-width: 600px;
+	box-shadow: 10px 10px 24px 8px #4a4a4a77;
+    overflow: hidden;
 }
 
-.screen__content {
-	z-index: 1;
-	position: relative;	
-	height: 100%;
+.box-left {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.screen__background {		
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	z-index: 0;
-	-webkit-clip-path: inset(0 0 0 0);
-	clip-path: inset(0 0 0 0);	
+.box-left img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
-.screen__background__shape {
-	transform: rotate(45deg);
-	position: absolute;
+.box-right {
+    display: flex;
+    justify-content: top;
+    align-items: left;
+    flex-direction: column;
 }
 
-.screen__background__shape1 {
-	height: 520px;
-	width: 520px;
-	background: #FFF;	
-	top: -50px;
-	right: 120px;	
-	border-radius: 0 72px 0 0;
+.login-heading {
+	padding-top: 85px;
+	padding-left: 35px;
+    font-weight: bold;
+    font-size: 26px;
 }
 
-.screen__background__shape2 {
-	height: 220px;
-	width: 220px;
-	background: #6C63AC;	
-	top: -172px;
-	right: 0;	
-	border-radius: 32px;
+.login-form {
+    padding-top: 60px;
+    padding-left: 35px;
+    padding-right: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
 
-.screen__background__shape3 {
-	height: 540px;
-	width: 190px;
-	background: linear-gradient(270deg, #5D54A4, #6A679E);
-	top: -24px;
-	right: 0;	
-	border-radius: 32px;
+.login-field input {
+    width: 100%;
+    padding-left: 3px;
+    padding-bottom: 2px;
+    border: none;
+    border-bottom: 1px solid #000000;
+    font-size: 11px;
+    color: #000000;
 }
 
-.screen__background__shape4 {
-	height: 400px;
-	width: 200px;
-	background: #7E7BB9;	
-	top: 420px;
-	right: 50px;	
-	border-radius: 60px;
+.button-login-submit {
+    background-color: #A826A2;
+    border: 0px;
+    border-radius: 5px;
+    padding: 3px;
+    padding-left: 82px;
+    padding-right: 82px;
+    margin-top: 1px;
 }
 
-.logo {
-    text-align: left;
-    margin-top: 12px;
-    margin-left: 12px
-
+.button-text{
+    color: #ffffff;
+    font-size: 10px;
+}
+.forgot-password-field {
+    padding-top: 5x;
+    padding-bottom: 20px;
+    font-size: 9px;
+    text-decoration: underline;
 }
 
-.logo img {
-    width: 120px;
-    height: auto;
+.forgot-password-field-text {
+    color: #000000;
 }
 
-.login {
-	width: 320px;
-	padding: 30px;
-	padding-top: 100px;
+.signup-text {
+    padding: 7px;
+    padding-left: 28px;
+    padding-right: 25px;
+    border: 1px solid #000000;
+    border-radius: 8px;
+    font-size: 9px;
+    color: #000000;
+    margin-top: 16px;
 }
 
-.login__field {
-	padding: 20px 0px;	
-	position: relative;	
-}
-
-.login__icon {
-	position: absolute;
-	top: 31px;
-	color: #5a5887a4;
-}
-
-.login__input {
-	border: none;
-	border-bottom: 2px solid #D1D1D4;
-	background: none;
-	padding: 10px;
-	padding-left: 19px;
-	font-weight: 700;
-	width: 75%;
-	transition: .2s;
-}
-
-.login__input:active,
-.login__input:focus,
-.login__input:hover {
-	outline: none;
-	border-bottom-color: #6A679E;
-}
-
-.login__submit {
-	background: #fff;
-	font-size: 14px;
-	margin-top: 20px;
-	padding: 13px 29px;
-	border-radius: 26px;
-	border: 1px solid #D4D3E8;
-	text-transform: uppercase;
-	font-weight: 700;
-	display: flex;
-	align-items: center;
-	width: 42%;
-	color: #4C489D;
-	box-shadow: 0px 2px 2px #5C5696;
-	cursor: pointer;
-	transition: .3s;
-}
-
-.login__submit:active,
-.login__submit:focus,
-.login__submit:hover {
-	border-color: #6A679E;
-	outline: none;
-    box-shadow: 0px 4px 4px #5C5696;
-    transition: .1s;
+.signup-text-link {
+    font-weight: bold;
+    text-decoration-line: none;
+    color: #6524EF;
 }
